   - ofaExportAssistant: display the chosen string delimiter.
   - ofaExportAssistant: fix amounts export format.
   - ofaGuidedInput: reset the dialog after entries generation (todo #986).
   - ofaIDBConnect: setup admin credentials when restoring a database.
   - ofoTVAForm: fix ofo_tva_form_get_is_deletable() method.

 Other changes:

   - Define a separated 'my' library.
   - my_cell_renderer_date_xxx(): are renamed to my_date_renderer_xxx().
   - my_double_is_zero(): new function.
   - my_editable_date_xxx(): are renamed to my_date_editable_xxx().
   - my_cell_renderer_double_xxx(): are renamed to my_double_renderer_xxx().
   - my_editable_double_xxx(): are renamed to my_double_editable_xxx().
   - myDateCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myDecimalCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myFieldCombo: rename 'ofa-changed' signal to 'my-changed'.
   - myIProgress: new interface.
   - myProgressBar: ofa-double, ofa-text and ofa-pulse signals are renamed to my-xxx equivalents.
   - ofa_amount_xxx(): new functions.
   - ofa_counter_xxx(): new functions.
   - ofaIEntryAccount: interface is removed and replaced with ofa_account_editable_xxx().
   - ofaIEntryOpeTemplate: interface is removed and replaced with ofa_ope_template_editable_xxx().
   - ofaOpenPrefsBin: new UI composite widget.
   - ofs_currency_cmp(): new function.

-----------------------------------------------------------------------
 Version 0.51
 ============

 Released on 2016-03-17

 New features and improvements:

   - Recurrent: new plugin (todo #213).
   - ofaIDBModel: extended to let plugins check objects deletability (todo #1043). 

 Bug fixes:

   - ofaAccountProperties: force indicators to FALSE if root account.

 Other changes:

   - my_idialog_run_maybe_modal(): new method.
   - ofaAccountFrameBin: moved to core/.
   - ofaAccountProperties: moved to core/.
   - ofaAccountSelect: moved to core/.
   - ofaAccountStore: moved to core/.